<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyProfileActivity"
    android:background="@drawable/ic_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_in_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:src="@drawable/back_button_white"
            android:backgroundTint="@color/colorTransparent">

        </ImageView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/nav_my_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginTop="@dimen/authentication_screen_marginTop"
        android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_view_layout_content_padding">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="@dimen/nav_image_size"
                android:layout_height="@dimen/nav_image_size"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="@dimen/nav_content_margin_StartEnd"
                android:layout_marginEnd="@dimen/nav_content_margin_StartEnd"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="@dimen/nav_image_circular_border_width"
                android:contentDescription="@string/image_contentDescription"
                android:src="@drawable/ic_user_place_holder" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textSize="@dimen/et_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/et_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:textSize="@dimen/et_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/btn_marginStartEnd"
                android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                android:layout_marginEnd="@dimen/btn_marginStartEnd"
                android:background="@drawable/rectangular_button"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_paddingTopBottom"
                android:paddingBottom="@dimen/btn_paddingTopBottom"
                android:text="@string/update"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_text_size" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>